# technetope

./: .gitignore  README.md  artists.html  imgui.ini  index.html  package-lock.json  package.json  technical.html  tmp_rs_test  tmp_rs_test.cpp  workingflow.md
acoustics/: README.md
acoustics/agents/agent_B/: README.md
acoustics/archive/agents/agent_A/: README.md
acoustics/archive/mother_mf/docs/: mother_mf_playback.md
acoustics/archive/mother_mf/tools/: run_mother_mf.py  run_mother_mf.sh
acoustics/archive/process/: coding_rules.md  issue_template.md  onboarding.md
acoustics/archive/tests/: README.md  audio_smoke_test.md  frog_round_validation.md  load_test.md  osc_sync_results.md
acoustics/archive/tests/test01/: README.md  targets copy.json  targets_mother.json
acoustics/docs/: device_setup.md  gui_dashboard_requirements.md  gui_spec.md  m5_scheduler_alignment_plan.md  masterdocs.md  requirements_frog_round.md  runbook_operations.md  troubleshooting.md
acoustics/firmware/: README.md  platformio.ini
acoustics/firmware/data/: manifest.json
acoustics/firmware/include/: .gitignore  Secrets.example.h
acoustics/firmware/src/: main.cpp
acoustics/firmware/src/modules/: HeartbeatPublisher.cpp  HeartbeatPublisher.h  NtpClient.cpp  NtpClient.h  OscReceiver.cpp  OscReceiver.h  PlaybackQueue.h  WiFiManager.cpp  WiFiManager.h
acoustics/logs/: heartbeat.csv
acoustics/pc_tools/: CMakeLists.txt  README.md
acoustics/pc_tools/gui/: CMakeLists.txt
acoustics/pc_tools/gui/src/: main.cpp
acoustics/pc_tools/libs/: CMakeLists.txt
acoustics/pc_tools/libs/include/acoustics/common/: DeviceRegistry.h
acoustics/pc_tools/libs/include/acoustics/osc/: OscEncryptor.h  OscTransport.h
acoustics/pc_tools/libs/src/: DeviceRegistry.cpp  OscEncryptor.cpp  OscTransport.cpp
acoustics/pc_tools/monitor/src/: main.cpp
acoustics/pc_tools/scheduler/: CMakeLists.txt
acoustics/pc_tools/scheduler/examples/: basic_timeline.json  mother_mf_a_section.json  sample_loop_x3.json  sample_loop_x3.rest.json
acoustics/pc_tools/scheduler/include/acoustics/scheduler/: SchedulerController.h  SoundTimeline.h  TargetResolver.h
acoustics/pc_tools/scheduler/src/: SchedulerController.cpp  SoundTimeline.cpp  TargetResolver.cpp  main.cpp
acoustics/pc_tools/scheduler/tests/: OscEncryptorTests.cpp  SoundTimelineTests.cpp
acoustics/sound_assets/: manifest.json
acoustics/state/: devices.json
acoustics/tests/test01/: frog_round.json  targets.json
acoustics/tools/monitor/: mock_ws_server.py
acoustics/tools/scheduler/: show_osc_keys.py
acoustics/tools/sound_gen/: generate_missing_f0.py
acoustics/tools/timeline/: generate_mother_mf_timeline.py  offset_to_ntp.py
acoustics/web/: README.md
acoustics/web/backend/: .eslintrc.cjs  config.example.json  package.json  tsconfig.json
acoustics/web/backend/src/: config.ts  deviceStore.ts  index.ts  logStore.ts  monitorClient.ts  timelineService.ts  types.ts  websocketHub.ts
acoustics/web/dashboard/: .eslintrc.cjs  index.html  package.json  tsconfig.json  vite.config.ts
acoustics/web/dashboard/src/: App.tsx  index.css  types.ts
acoustics/web/dashboard/src/components/: DeviceGrid.tsx  DiagnosticsPanel.tsx  FirePanel.tsx  LogsPanel.tsx  TimelinePanel.tsx
acoustics/web/dashboard/src/state/: dashboardStore.ts
acoustics/web/dashboard/src/utils/: time.ts
docs/: apple_silicon_realsense.md
external_references/PointCloud-Playground/: README.md
external_references/PointCloud-Playground/config/: settings.yaml
external_references/PointCloud-Playground/scripts/: run_basic_examples.py
external_references/PointCloud-Playground/src/core/: __init__.py  cube_detector.py  image_processor.py  plane_detector.py  point_cloud_processor.py
external_references/PointCloud-Playground/src/examples/: __init__.py  plane_fitting.py  point_cloud_rotation.py  realtime_cube_detection.py
external_references/PointCloud-Playground/src/utils/: __init__.py  file_io.py  transformations.py  visualization.py
external_references/PointCloud-Playground/tests/: test_point_cloud.py
external_references/librealsense/: macos_gl_compat.patch
locomotion/calibration/: CMakeLists.txt  HUMAN_DETECTION_VERIFICATION.md  README.md  STATUS.md  TESTING.md  implementation_requirements.md
locomotion/calibration/include/locomotion/calibration/: CalibrationPipeline.h  CalibrationResult.h  CalibrationSession.h  CameraIntrinsics.h  FloorPlaneEstimator.h
locomotion/calibration/src/: CalibrationPipeline.cpp  CalibrationSession.cpp  CharucoDetector.cpp  FloorPlaneEstimator.cpp
locomotion/calibration/tools/: calibrate_intrinsics.cpp  capture_calibration.cpp
logs/: heartbeat_frog.csv  mother_mf.csv
state/: devices.json
swarm/: .style.yapf  jsonの通信仕様書.md  pyproject.toml
swarm/client/: client.py  control.py
swarm/contorl_server/: CMakeLists.txt  IMPLEMENTATION_PLAN.md
swarm/contorl_server/config/: control_server.json
swarm/contorl_server/include/: app.hpp  cube_registry.hpp  fleet_orchestrator.hpp  motion_controller.hpp
swarm/contorl_server/src/: app.cpp  cube_registry.cpp  fleet_orchestrator.cpp  motion_controller.cpp
swarm/cpp_client/: CMakeLists.txt  New_develop.md  README.md  design.md
swarm/cpp_client/configs/: config-old.yaml  config.yaml  minimal.yaml
swarm/cpp_client/docs/: cli.md  middleware.md
swarm/cpp_client/include/toio/cli/: config_loader.hpp
swarm/cpp_client/include/toio/client/: toio_client.hpp
swarm/cpp_client/samples/: circle_motion_sample.cpp  motion_planner.cpp  motion_planner.hpp
swarm/cpp_client/src/: main.cpp  toio_client.cpp
swarm/cpp_client/src/cli/: config_loader.cpp
swarm/python_client/: utils.py
swarm/relay_server/: RaspberryPiの初期設定.md  cubes.py  server.py
swarm/web_cliant/: rawjson.html  webgui.html
swarm/ws-cliant/: webgui.html
